2006-05-12  Miguel de Icaza  <miguel@novell.com>

	* StatusBar.cs (UpdatePanel): If the panel being refreshes has the
	AutoSize set to None, we do not need to relayout everything, we
	just need to invalidate the current region.

	(Draw): Do not draw the entire ClientArea, just redraw the
	clip area being passed.

	* MdiClient.cs: Make MdiClient constructor with the Form argument
	internal. 

2006-05-12  Jackson Harper  <jackson@ximian.com>

	* ThemeWin32Classic.cs (DrawToolBar): Flat toolbars get their
	parents background image,  but strangely not their own.
	- (DrawStatusBarPanel): Take into account horizontal alignment
	when drawing the strings and icons.

2006-05-12  Mike Kestner  <mkestner@novell.com>

	* ListBox.cs: avoid invalidations for focus when the collection is
	empty. 

2006-05-12  Chris Toshok  <toshok@ximian.com>

	* ScrollBar.cs (OnMouseMoveSB): when dragging the thumb, don't
	invalidate the entire thumb area.  Call InvalidateDirty which
	limits the redraw to the thumb itself and surrounding pixels.

	* XplatUIX11.cs (ScrollWindow): optimize copying.
	
2006-05-12  Chris Toshok  <toshok@ximian.com>

	* DataGridDrawingLogic.cs: make CalcGridAreas non-reentrant.
	Figure out the positioning/layout in a single pass instead of
	multiple recursive invocations.  Speeds up the initial display of
	the data grid.  Also, make many things private that were
	originally public but unused outside this class.

2006-05-11  Jackson Harper  <jackson@ximian.com>

	* MdiClient.cs: Improved layout code.

2006-05-11  Jonathan Chambers  <jonathan.chambers@ansys.com>

	* PropertyGrid.cs : Only check GetPropertiesSupported for properties,
	  not SelectedObject.

2006-05-11  Chris Toshok  <toshok@ximian.com>

	* Hwnd.cs (Invalid): don't start off with Rectangle.Empty, as
	union of that will always be {0,0,width,height}.

2006-05-11  Jackson Harper  <jackson@ximian.com>

	* Form.cs: Match MS's DefaultSize for forms (they must have
	changed the size in sp2).
